TST: Remove install of xctool

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,2 @@
 language: objective-c
-before_install:
-    - brew update
-    - brew install xctool
-script: xctool -scheme ITTDMMAWHTTTF test -sdk iphonesimulator
+script: xctool -scheme ITTDMMAWHTTTF test -sdk iphonesimulator -project ITTDMMAWHTTTF.xcodeproj
